# claude-menubar

./: .gitignore  Cargo.toml  ClaudeBar.sh  README.md  build.rs  install.sh  uninstall.sh
src/: ClaudeBar.sh  claude-status-cache.sh  display.rs  focus.rs  hook.rs  icon.rs  main.rs  process.rs  serve.rs  session-track.sh  state.rs  terminal.rs  transcript.rs
swift/: ClaudeBar.swift
test/: test_status_detection.py
