[package]
name = "claude-bar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-bar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[build-dependencies]
base64 = "0.22"
flate2 = "1"
